scalpa_oldy/build/y.scalpa.output
Terminaux inutilisés dans la grammaire

    STENCIL
    FOR
    RETURN


Grammaire

    0 $accept: axiom $end

    1 axiom: statement_list

    2 statement_list: statement_list statement
    3               | statement

    4 statement: assign_statement
    5          | declare_statement
    6          | expr_statement
    7          | braced_statement
    8          | PRINTI '(' expr ')' END
    9          | IF '(' condition ')' statement
   10          | IF '(' condition ')' statement ELSE link statement
   11          | WHILE '(' condition ')' statement

   12 braced_statement: '{' '}'
   13                 | '{' statement_list '}'

   14 declare_statement: INT IDENTIFIER END
   15                  | INT IDENTIFIER ASSIGN expr END

   16 assign_statement: IDENTIFIER ASSIGN expr END

   17 expr_statement: expr END

   18 expr: expr PLUS expr
   19     | PLUS expr
   20     | expr MINUS expr
   21     | MINUS expr
   22     | INC IDENTIFIER
   23     | DEC IDENTIFIER
   24     | IDENTIFIER INC
   25     | IDENTIFIER DEC
   26     | expr MULT expr
   27     | expr DIVI expr
   28     | '(' expr ')'
   29     | IDENTIFIER
   30     | CONSTANT

   31 link: %empty

   32 condition: expr RELOP expr
   33          | TRUE
   34          | FALSE
   35          | condition OR condition
   36          | condition AND condition
   37          | NOT condition
   38          | '(' condition ')'


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '(' (40) 8 9 10 11 28 38
    ')' (41) 8 9 10 11 28 38
    '{' (123) 12 13
    '}' (125) 12 13
    error (256)
    INT (258) 14 15
    STENCIL (259)
    IF (260) 9 10
    ELSE (261) 10
    WHILE (262) 11
    FOR (263)
    RETURN (264)
    PRINTI (265) 8
    ASSIGN (266) 15 16
    PLUS (267) 18 19
    MINUS (268) 20 21
    MULT (269) 26
    DIVI (270) 27
    INC (271) 22 24
    DEC (272) 23 25
    END (273) 8 14 15 16 17
    TRUE (274) 33
    FALSE (275) 34
    OR (276) 35
    AND (277) 36
    NOT (278) 37
    CONSTANT <value> (279) 30
    RELOP <value> (280) 32
    IDENTIFIER <string> (281) 14 15 16 22 23 24 25 29
    LOWER_THAN_ELSE (282)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    axiom (33)
        à gauche: 1
        à droite: 0
    statement_list <statementData> (34)
        à gauche: 2 3
        à droite: 1 2 13
    statement <statementData> (35)
        à gauche: 4 5 6 7 8 9 10 11
        à droite: 2 3 9 10 11
    braced_statement <statementData> (36)
        à gauche: 12 13
        à droite: 7
    declare_statement <statementData> (37)
        à gauche: 14 15
        à droite: 5
    assign_statement <statementData> (38)
        à gauche: 16
        à droite: 4
    expr_statement <statementData> (39)
        à gauche: 17
        à droite: 6
    expr <exprData> (40)
        à gauche: 18 19 20 21 22 23 24 25 26 27 28 29 30
        à droite: 8 15 16 17 18 19 20 21 26 27 28 32
    link <statementData> (41)
        à gauche: 31
        à droite: 10
    condition <condData> (42)
        à gauche: 32 33 34 35 36 37 38
        à droite: 9 10 11 35 36 37 38


État 0

    0 $accept: . axiom $end

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12

    axiom              aller à l'état 13
    statement_list     aller à l'état 14
    statement          aller à l'état 15
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 1

   14 declare_statement: INT . IDENTIFIER END
   15                  | INT . IDENTIFIER ASSIGN expr END

    IDENTIFIER  décalage et aller à l'état 21


État 2

    9 statement: IF . '(' condition ')' statement
   10          | IF . '(' condition ')' statement ELSE link statement

    '('  décalage et aller à l'état 22


État 3

   11 statement: WHILE . '(' condition ')' statement

    '('  décalage et aller à l'état 23


État 4

    8 statement: PRINTI . '(' expr ')' END

    '('  décalage et aller à l'état 24


État 5

   19 expr: PLUS . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 26


État 6

   21 expr: MINUS . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 27


État 7

   22 expr: INC . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 28


État 8

   23 expr: DEC . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 29


État 9

   30 expr: CONSTANT .

    $défaut  réduction par utilisation de la règle 30 (expr)


État 10

   16 assign_statement: IDENTIFIER . ASSIGN expr END
   24 expr: IDENTIFIER . INC
   25     | IDENTIFIER . DEC
   29     | IDENTIFIER .

    ASSIGN  décalage et aller à l'état 30
    INC     décalage et aller à l'état 31
    DEC     décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 29 (expr)


État 11

   28 expr: '(' . expr ')'

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 33


État 12

   12 braced_statement: '{' . '}'
   13                 | '{' . statement_list '}'

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12
    '}'         décalage et aller à l'état 34

    statement_list     aller à l'état 35
    statement          aller à l'état 15
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 13

    0 $accept: axiom . $end

    $end  décalage et aller à l'état 36


État 14

    1 axiom: statement_list .
    2 statement_list: statement_list . statement

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 1 (axiom)

    statement          aller à l'état 37
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 15

    3 statement_list: statement .

    $défaut  réduction par utilisation de la règle 3 (statement_list)


État 16

    7 statement: braced_statement .

    $défaut  réduction par utilisation de la règle 7 (statement)


État 17

    5 statement: declare_statement .

    $défaut  réduction par utilisation de la règle 5 (statement)


État 18

    4 statement: assign_statement .

    $défaut  réduction par utilisation de la règle 4 (statement)


État 19

    6 statement: expr_statement .

    $défaut  réduction par utilisation de la règle 6 (statement)


État 20

   17 expr_statement: expr . END
   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    END    décalage et aller à l'état 42


État 21

   14 declare_statement: INT IDENTIFIER . END
   15                  | INT IDENTIFIER . ASSIGN expr END

    ASSIGN  décalage et aller à l'état 43
    END     décalage et aller à l'état 44


État 22

    9 statement: IF '(' . condition ')' statement
   10          | IF '(' . condition ')' statement ELSE link statement

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 49
    condition  aller à l'état 50


État 23

   11 statement: WHILE '(' . condition ')' statement

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 49
    condition  aller à l'état 51


État 24

    8 statement: PRINTI '(' . expr ')' END

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 52


État 25

   24 expr: IDENTIFIER . INC
   25     | IDENTIFIER . DEC
   29     | IDENTIFIER .

    INC  décalage et aller à l'état 31
    DEC  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 29 (expr)


État 26

   18 expr: expr . PLUS expr
   19     | PLUS expr .
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    MULT  décalage et aller à l'état 40
    DIVI  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 19 (expr)


État 27

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   21     | MINUS expr .
   26     | expr . MULT expr
   27     | expr . DIVI expr

    MULT  décalage et aller à l'état 40
    DIVI  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 21 (expr)


État 28

   22 expr: INC IDENTIFIER .

    $défaut  réduction par utilisation de la règle 22 (expr)


État 29

   23 expr: DEC IDENTIFIER .

    $défaut  réduction par utilisation de la règle 23 (expr)


État 30

   16 assign_statement: IDENTIFIER ASSIGN . expr END

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 53


État 31

   24 expr: IDENTIFIER INC .

    $défaut  réduction par utilisation de la règle 24 (expr)


État 32

   25 expr: IDENTIFIER DEC .

    $défaut  réduction par utilisation de la règle 25 (expr)


État 33

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr
   28     | '(' expr . ')'

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    ')'    décalage et aller à l'état 54


État 34

   12 braced_statement: '{' '}' .

    $défaut  réduction par utilisation de la règle 12 (braced_statement)


État 35

    2 statement_list: statement_list . statement
   13 braced_statement: '{' statement_list . '}'

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12
    '}'         décalage et aller à l'état 55

    statement          aller à l'état 37
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 36

    0 $accept: axiom $end .

    $défaut  accepter


État 37

    2 statement_list: statement_list statement .

    $défaut  réduction par utilisation de la règle 2 (statement_list)


État 38

   18 expr: expr PLUS . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 56


État 39

   20 expr: expr MINUS . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 57


État 40

   26 expr: expr MULT . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 58


État 41

   27 expr: expr DIVI . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 59


État 42

   17 expr_statement: expr END .

    $défaut  réduction par utilisation de la règle 17 (expr_statement)


État 43

   15 declare_statement: INT IDENTIFIER ASSIGN . expr END

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 60


État 44

   14 declare_statement: INT IDENTIFIER END .

    $défaut  réduction par utilisation de la règle 14 (declare_statement)


État 45

   33 condition: TRUE .

    $défaut  réduction par utilisation de la règle 33 (condition)


État 46

   34 condition: FALSE .

    $défaut  réduction par utilisation de la règle 34 (condition)


État 47

   37 condition: NOT . condition

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 49
    condition  aller à l'état 61


État 48

   28 expr: '(' . expr ')'
   38 condition: '(' . condition ')'

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 62
    condition  aller à l'état 63


État 49

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr
   32 condition: expr . RELOP expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    RELOP  décalage et aller à l'état 64


État 50

    9 statement: IF '(' condition . ')' statement
   10          | IF '(' condition . ')' statement ELSE link statement
   35 condition: condition . OR condition
   36          | condition . AND condition

    OR   décalage et aller à l'état 65
    AND  décalage et aller à l'état 66
    ')'  décalage et aller à l'état 67


État 51

   11 statement: WHILE '(' condition . ')' statement
   35 condition: condition . OR condition
   36          | condition . AND condition

    OR   décalage et aller à l'état 65
    AND  décalage et aller à l'état 66
    ')'  décalage et aller à l'état 68


État 52

    8 statement: PRINTI '(' expr . ')' END
   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    ')'    décalage et aller à l'état 69


État 53

   16 assign_statement: IDENTIFIER ASSIGN expr . END
   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    END    décalage et aller à l'état 70


État 54

   28 expr: '(' expr ')' .

    $défaut  réduction par utilisation de la règle 28 (expr)


État 55

   13 braced_statement: '{' statement_list '}' .

    $défaut  réduction par utilisation de la règle 13 (braced_statement)


État 56

   18 expr: expr . PLUS expr
   18     | expr PLUS expr .
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    MULT  décalage et aller à l'état 40
    DIVI  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 18 (expr)


État 57

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   20     | expr MINUS expr .
   26     | expr . MULT expr
   27     | expr . DIVI expr

    MULT  décalage et aller à l'état 40
    DIVI  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 20 (expr)


État 58

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   26     | expr MULT expr .
   27     | expr . DIVI expr

    $défaut  réduction par utilisation de la règle 26 (expr)


État 59

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr
   27     | expr DIVI expr .

    $défaut  réduction par utilisation de la règle 27 (expr)


État 60

   15 declare_statement: INT IDENTIFIER ASSIGN expr . END
   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    END    décalage et aller à l'état 71


État 61

   35 condition: condition . OR condition
   36          | condition . AND condition
   37          | NOT condition .

    $défaut  réduction par utilisation de la règle 37 (condition)


État 62

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr
   28     | '(' expr . ')'
   32 condition: expr . RELOP expr

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41
    RELOP  décalage et aller à l'état 64
    ')'    décalage et aller à l'état 54


État 63

   35 condition: condition . OR condition
   36          | condition . AND condition
   38          | '(' condition . ')'

    OR   décalage et aller à l'état 65
    AND  décalage et aller à l'état 66
    ')'  décalage et aller à l'état 72


État 64

   32 condition: expr RELOP . expr

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 11

    expr  aller à l'état 73


État 65

   35 condition: condition OR . condition

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 49
    condition  aller à l'état 74


État 66

   36 condition: condition AND . condition

    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    TRUE        décalage et aller à l'état 45
    FALSE       décalage et aller à l'état 46
    NOT         décalage et aller à l'état 47
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 25
    '('         décalage et aller à l'état 48

    expr       aller à l'état 49
    condition  aller à l'état 75


État 67

    9 statement: IF '(' condition ')' . statement
   10          | IF '(' condition ')' . statement ELSE link statement

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12

    statement          aller à l'état 76
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 68

   11 statement: WHILE '(' condition ')' . statement

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12

    statement          aller à l'état 77
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 69

    8 statement: PRINTI '(' expr ')' . END

    END  décalage et aller à l'état 78


État 70

   16 assign_statement: IDENTIFIER ASSIGN expr END .

    $défaut  réduction par utilisation de la règle 16 (assign_statement)


État 71

   15 declare_statement: INT IDENTIFIER ASSIGN expr END .

    $défaut  réduction par utilisation de la règle 15 (declare_statement)


État 72

   38 condition: '(' condition ')' .

    $défaut  réduction par utilisation de la règle 38 (condition)


État 73

   18 expr: expr . PLUS expr
   20     | expr . MINUS expr
   26     | expr . MULT expr
   27     | expr . DIVI expr
   32 condition: expr RELOP expr .

    PLUS   décalage et aller à l'état 38
    MINUS  décalage et aller à l'état 39
    MULT   décalage et aller à l'état 40
    DIVI   décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 32 (condition)


État 74

   35 condition: condition . OR condition
   35          | condition OR condition .
   36          | condition . AND condition

    AND  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 35 (condition)


État 75

   35 condition: condition . OR condition
   36          | condition . AND condition
   36          | condition AND condition .

    $défaut  réduction par utilisation de la règle 36 (condition)


État 76

    9 statement: IF '(' condition ')' statement .
   10          | IF '(' condition ')' statement . ELSE link statement

    ELSE  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 9 (statement)


État 77

   11 statement: WHILE '(' condition ')' statement .

    $défaut  réduction par utilisation de la règle 11 (statement)


État 78

    8 statement: PRINTI '(' expr ')' END .

    $défaut  réduction par utilisation de la règle 8 (statement)


État 79

   10 statement: IF '(' condition ')' statement ELSE . link statement

    $défaut  réduction par utilisation de la règle 31 (link)

    link  aller à l'état 80


État 80

   10 statement: IF '(' condition ')' statement ELSE link . statement

    INT         décalage et aller à l'état 1
    IF          décalage et aller à l'état 2
    WHILE       décalage et aller à l'état 3
    PRINTI      décalage et aller à l'état 4
    PLUS        décalage et aller à l'état 5
    MINUS       décalage et aller à l'état 6
    INC         décalage et aller à l'état 7
    DEC         décalage et aller à l'état 8
    CONSTANT    décalage et aller à l'état 9
    IDENTIFIER  décalage et aller à l'état 10
    '('         décalage et aller à l'état 11
    '{'         décalage et aller à l'état 12

    statement          aller à l'état 81
    braced_statement   aller à l'état 16
    declare_statement  aller à l'état 17
    assign_statement   aller à l'état 18
    expr_statement     aller à l'état 19
    expr               aller à l'état 20


État 81

   10 statement: IF '(' condition ')' statement ELSE link statement .

    $défaut  réduction par utilisation de la règle 10 (statement)
